--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Alex Serdyuk - Interactive CV</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+      }
+    </style>
   </head>
   <body>
   </body>
