feat: added interactive skills display + basic html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Alex Serdyuk - Interactive CV</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css" />
     <style>
       body {
+        padding-top: 3rem;
         display: flex;
         justify-content: center;
       }
     </style>
   </head>
   <body>
+    <div>
+      <h3 class="title">Alex Serdyuk - Interactive Profile</h3>
+
+      <div class="box">
+        User <em>cursor</em> to move the player.  Spaceship represtnt
+        the organization of work or study.  Jump and touch the Spaceship
+        in order to retrieve the experience.
+      </div>
+      <div id="cv"></div>
+    </div>
   </body>
 </html>
