chore: added manifest to force landscape mode

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Alex Serdyuk - Interactive CV</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css" />
+    <link rel="manifest" href="manifest.json">
+
     <style>
       html, body {
         height: 100%;
